[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/Decorations/Nature/Grasses/TallGrassObject.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 6.08276

[node name="TallGrassObject" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 3, 4 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 4, -10 )
shape = SubResource( 2 )

[node name="BackArea2D" type="Area2D" parent="."]
position = Vector2( 3, -17 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackArea2D"]
position = Vector2( 4, -10 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="BackArea2D" to="." method="_on_BackArea2D_body_entered"]
[connection signal="body_exited" from="BackArea2D" to="." method="_on_BackArea2D_body_exited"]
